--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,7 +1,8 @@
 .NavBar {
     display: flex;
     justify-content: space-between;
-    margin: 10px 10px
+    padding: 10px 20px;
+    height: 40px;
 }
   
 .NavBar-link {
@@ -9,5 +10,9 @@
 }
 
 .NavBar-welcome {
-    color: grey;
+    color: black;
+}
+
+.NavBar-wrap {
+    background-color: rgb(247, 247, 247);
 }
