--- a/src/components/QuestionList/QuestionList.css
+++ b/src/components/QuestionList/QuestionList.css
@@ -2,6 +2,18 @@
     overflow: scroll;
     /* border: 1px dashed grey; */
     padding: 0 5px;
-    max-height: 100px;
+    max-height: 95px;
     margin: 0 5px;
+}
+
+.QuestionList {
+    width: 80vw;
+    max-width: 600px;
+    margin: 20px auto;
+    max-height: 80%;
+    padding-top: 1px;
+    padding-bottom: 30px;
+    background-color: rgb(247, 247, 247);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.25), 0 6px 20px 0 rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
 }
