questions rendering when clicked for both users

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -3,6 +3,7 @@
     justify-content: space-between;
     padding: 10px 20px;
     height: 40px;
+    background-color: rgb(191, 190, 187);
 }
   
 .NavBar-link {
