--- a/src/pages/MedSchoolStudent/HomePage/StudHomePage.css
+++ b/src/pages/MedSchoolStudent/HomePage/StudHomePage.css
@@ -4,6 +4,24 @@
     font-size: 16px;
 }
 
-.StudHome h1 {
-    padding: 20px;
+.StudHome-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.Response-wrapper {
+    width: 80vw;
+    max-width: 600px;
+    margin: 0 auto;
+    background-color: rgb(247, 247, 247);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.25), 0 6px 20px 0 rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
+    /* height: 220px; */
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.Response-wrapper h1 {
+    text-align: center;
 }
