login & signup css complete, still missing immediate rendering of answers & mapped elements styling

--- a/src/pages/LoginPage/LoginPage.css
+++ b/src/pages/LoginPage/LoginPage.css
@@ -3,5 +3,11 @@
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-    margin-bottom: 50px;
+    padding-top: 40%;
   }
+
+.header-footer {
+  font-size: 20px;
+  margin: 10px 0 10px;
+  text-align: center;
+}
