--- a/src/pages/SignupPage/SignupPage.css
+++ b/src/pages/SignupPage/SignupPage.css
@@ -3,5 +3,15 @@
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-    margin-top: 10%;
+    padding-top: 40%;
+  }
+
+.header-footer {
+  font-size: 20px;
+  margin: 10px 0 10px;
+}
+
+.dropdown {
+    margin-bottom: 15px;
+    color: rgb(157, 157, 157);
 }
