--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     padding: 10px 20px;
     height: 40px;
-    background-color: rgb(191, 190, 187);
+    background-image: linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%);
 }
   
 .NavBar-link {
@@ -16,4 +16,8 @@
 
 .NavBar-wrap {
     background-color: rgb(247, 247, 247);
+}
+
+.NavBar-link {
+    color: rgb(50, 50, 50)
 }
