--- a/src/components/QuestionForm/QuestionForm.css
+++ b/src/components/QuestionForm/QuestionForm.css
@@ -19,3 +19,8 @@
     justify-content: center;
     padding-bottom: 35px;
 }
+
+.btn-success {
+    background-color: rgb(121, 188, 250);
+    border-color: rgb(117, 171, 248)
+}
