--- a/src/components/QuestionList/QuestionList.css
+++ b/src/components/QuestionList/QuestionList.css
@@ -17,3 +17,7 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.25), 0 6px 20px 0 rgba(0, 0, 0, 0.25);
     border-radius: 8px;
 }
+
+.QuestionList p {
+    font-size: 12px;
+}
