--- a/src/pages/WelcomePage/WelcomePage.css
+++ b/src/pages/WelcomePage/WelcomePage.css
@@ -1,10 +1,9 @@
 .Welcome {
     text-align: center;
-    /* margin-top: 50px; */
+    padding-top: 30%;
     font-size: 16px;
 }
 
 .Welcome h1 {
     font-size: 50px;
-    padding: 20px;
 }
