--- a/src/components/QuestionList/QuestionList.css
+++ b/src/components/QuestionList/QuestionList.css
@@ -16,8 +16,9 @@
     background-color: rgb(247, 247, 247);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.25), 0 6px 20px 0 rgba(0, 0, 0, 0.25);
     border-radius: 8px;
+    min-width: 280px;
 }
 
 .QuestionList p {
-    font-size: 12px;
+    font-size: 13px;
 }
