--- a/src/pages/MedSchoolApplicant/HomePage/AppHomePage.css
+++ b/src/pages/MedSchoolApplicant/HomePage/AppHomePage.css
@@ -11,7 +11,7 @@
     background-color: rgb(247, 247, 247);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.25), 0 6px 20px 0 rgba(0, 0, 0, 0.25);
     border-radius: 8px;
-    /* height: 220px; */
+    min-width: 280px;
 }
 
 .QuestionList-wrapper {
@@ -28,4 +28,9 @@
 
 .QuestionForm-wrapper h2 {
     margin-bottom: 20px;
+}
+
+.starter-text {
+    margin: 25px 0 25px;
+    font-size: 13px;
 }
