--- a/src/pages/LoginPage/LoginPage.css
+++ b/src/pages/LoginPage/LoginPage.css
@@ -3,7 +3,7 @@
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-    padding-top: 40%;
+    padding-top: 100px;
   }
 
 .header-footer {
