--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -6,14 +6,9 @@
     background-image: linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%);
 }
 
-
 .NavBar-welcome {
     color: black;
     font-size: 14px
-}
-
-.NavBar-wrap {
-    background-color: rgb(247, 247, 247);
 }
 
 .NavBar-link {
@@ -21,6 +16,23 @@
     font-size: 14px;
 }
 
-.NavBar-wrap h4 {
-    margin-top: 2px;
+.NavBar p {
+    font-weight: 500;
+    font-size: 24px;
+    margin-top: 9px;
+}
+
+.nav-thirds {
+    width: 33.333vw;
+    /* border: 1px solid black; */
+}
+
+#second {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#third {
+    text-align: right;
 }
