--- a/src/components/QuestionList/QuestionList.css
+++ b/src/components/QuestionList/QuestionList.css
@@ -14,7 +14,8 @@
     padding-top: 1px;
     padding-bottom: 30px;
     background-color: rgb(247, 247, 247);
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.25), 0 6px 20px 0 rgba(0, 0, 0, 0.25);
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.25), 0 6px 20px 0 rgba(0, 0, 0, 0.25); */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .15), 0 4px 8px 0 rgba(0, 0, 0, 0.15);
     border-radius: 8px;
     min-width: 280px;
 }
