--- a/src/pages/MedSchoolApplicant/HomePage/AppHomePage.css
+++ b/src/pages/MedSchoolApplicant/HomePage/AppHomePage.css
@@ -9,7 +9,7 @@
     max-width: 600px;
     margin: 0 auto;
     background-color: rgb(247, 247, 247);
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.25), 0 6px 20px 0 rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .15), 0 4px 8px 0 rgba(0, 0, 0, 0.15);
     border-radius: 8px;
     min-width: 280px;
 }
